--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@ $('.customer-logos').slick({
   arrows: false,
   autoplaySpeed: 2000,
   pauseOnHover: true,
-  autoplay:true,
+  // autoplay:true,
   accessibility: true,
   responsive: [
     {
@@ -54,7 +54,7 @@ $('.customer-logos').slick({
     },
     
     {
-      breakpoint: 800,
+      breakpoint: 900,
       settings: {
         slidesToShow: 1,
         slidesToScroll: 1,
@@ -64,7 +64,7 @@ $('.customer-logos').slick({
       }
     },
     {
-      breakpoint: 500,
+      breakpoint: 700,
       settings: {
         slidesToShow: 1,
         slidesToScroll: 1,
@@ -111,6 +111,9 @@ $('.customer-logos').slick({
     AOS.init({
     });
   </script>
+
+
+
   
   </body>
 </html>
