--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@ $('.customer-logos').slick({
   arrows: false,
   autoplaySpeed: 2000,
   pauseOnHover: true,
-  // autoplay:true,
+  autoplay:true,
   accessibility: true,
   responsive: [
     {
