--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,14 @@ $('.customer-logos').slick({
         slidesToScroll: 1,
         infinite: true,
         centerMode: true,
+        pauseOnHover: true,
         dots: false,
+      }
+    },
+    {
+    breakpoint: 500,
+      settings: {
+        pauseOnHover: false,
       }
     }
     // You can unslick at a given breakpoint now by adding:
