--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,11 @@ $('.customer-logos').slick({
     breakpoint: 500,
       settings: {
         pauseOnHover: false,
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        infinite: true,
+        centerMode: true,
+        dots: false,
       }
     }
     // You can unslick at a given breakpoint now by adding:
